AppControl Manager v2.0.64.0 And Harden System Security v1.0.39.0
* Added optional per user encryption for [the Policies Library](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Sidebar) cache. When enabled (off by default), cached policy files are encrypted using Windows DPAPI and stored for the current user only. The app automatically enforces the chosen encryption setting at startup and whenever the toggle on the Sidebar changes, keeping the on disk cache in sync with the preference. When you encrypt your policy files with this feature, they are accessible only while you are signed into the same Windows user account. If you switch to a different user account or move the cache files to another machine, they will not be readable. This enhances security by ensuring that sensitive policy data is protected and accessible only to the intended user.

   * Using the `Backup All` button under the `Actions` menu creates an unencrypted backup of all policies in the library and saves them in the directory that you selected, regardless of the encryption setting. This is to ensure that users can always access their policies when restoring from a backup, even if they switch to a different user account or machine.

   * Encryption Scope: Select an encryption scope: User, which allows only the current Windows account to decrypt the encrypted policy files, or Machine, which restricts decryption to this device so the files cannot be decrypted if moved to another device.

   * If using Administrator Protection mode in the OS, it's recommended to switch to Machine scope mode. Policies encrypted with Machine scope can be decrypted by any user on the same device, while policies encrypted with User scope can only be decrypted by the user who encrypted them.

* The Scan Levels in each page now visually show the fall back levels and their order. The way the scan levels work has been a frequently asked question, this change helps clarify their workflows and shows how AppControl Ma

--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,7 +1,15 @@
-* You can now Show/Hide each column in the list views (aka data grids) in the app, making it easier to customize the view to your needs, hide columns you don't need and show only the ones you care about. By default, the columns related to Hash are hidden, if you want to display them, you simply have to click/tap on their corresponding option. Completes this request: https://github.com/HotCakeX/Harden-Windows-Security/issues/783
+* Added optional per user encryption for Policies Library cache (off by default). Cached policy files are encrypted using Windows DPAPI for the current user only. The app enforces the encryption setting at startup and when the Sidebar toggle changes. Encrypted files are only accessible on the same Windows user account.
 
-* Incremental loading list views found in Supplemental policy and Deny policy creation pages, now automatically enable resizable columns when the amount of the data about to be loaded exceeds 100k. This will instantly show the entire data in the list view and process the rest as you scroll, rather than processing the entire data at once which could cause delays in the UI.
+   * `Backup All` under the `Actions` menu creates unencrypted backups regardless of encryption setting, ensuring policies are accessible when restoring from backup on different accounts or machines.
 
-* All of these improvements are made to make it much easier to scan the entire disk or multiple drives at once to create App Control policies. For instance, you can create an App Control policy for the entire C drive in ~2 minutes, depending on the hardware and the configured scalability setting in the app.
+   * Encryption Scope: User scope allows only the current Windows account to decrypt files. Machine scope restricts decryption to the device, preventing access if files are moved elsewhere.
 
-* Updated dependencies to the latest version.
+   * If using Administrator Protection mode, Machine scope is recommended. Machine scope allows any user on the device to decrypt, while User scope restricts to the encrypting user only.
+
+* Scan Levels now visually show fallback levels and their order, clarifying workflows based on community feedback.
+
+* Improved overall performance during policy creation - less RAM and CPU usage for the same tasks.
+
+* Added Home page tile showing total count of USB devices connected to your device. Click/tap to view detailed list of each device.
+
+* Added support for .BIN App Control policy files. Open in Policy Editor to decode or drag to Policies Library to import.
